ui: fixed spacing in flash_and_mainby - primary issue changed flex-direction: column

--- a/app_package/static/scss/_main.scss
+++ b/app_package/static/scss/_main.scss
@@ -2,6 +2,7 @@
     display: flex;
     gap:1rem;
     flex-wrap: wrap;
+    padding-top:2rem;
 
     .col_1, .col_2 {
         display:flex;
@@ -11,7 +12,6 @@
     }
     .col_1_sub{
         width: 80%;
-        height:fit-content;
     }
     
     .s_text_color_yellow{color:var(--color-yellow)}
@@ -182,9 +182,13 @@
     display:flex;
     justify-content: center;
     color:var(--color-gray-text);
+    padding-top:2rem;
     .col_1{
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         width: 80%;
-        // padding-top:10rem;
+        justify-content: center;
     }
     .div_hi_big{
         width: 100%;
@@ -193,7 +197,6 @@
     }
     .paragraph_home{
         a{
-            // text-decoration: none;
             color:var(--color-gray-text)
         }
     }
@@ -205,8 +208,15 @@
         display: flex;
         // height: 100vh;  /* Optional: Takes the full height of the viewport */
     }
+    .home_page{
+        padding-top:0;
+        .col_1, .col_2 {
+            flex:1;
+            align-items: center;
+        }
+    }
 
-    .home_page, .about_page {
+    .about_page {
         justify-content: space-between;
         flex:1;
         flex-wrap: nowrap;
@@ -228,6 +238,6 @@
         }
         .div_education{padding-bottom:5rem;}
     }
-
+    .about_this_page{padding-top:0;}
 
 }
